# Client_QT

./: .gitignore  CMakeLists.txt  CameraWidget.cpp  CameraWidget.h  CameraWidget.ui  Coordinate.h  HanwhaThread.cpp  HanwhaThread.h  Info.plist  MainWindow.cpp  MainWindow.h  MainWindow.ui  Makefile  README.md  Resources.qrc  RtspServer.cpp  RtspServer.h  TcpThread.cpp  TcpThread.h  VideoThread.cpp  VideoThread.h  VideoThreadWebcam.cpp  VideoThreadWebcam.h  VideoThread_cut.cpp  VideoWidget.cpp  VideoWidget.h  audio_control.cpp  audio_control.h  cam_dialog.cpp  cam_dialog.h  cam_dialog.ui  client_tls.c  client_tls.h  cmake_install.cmake  forlocal.cpp  forlocal.h  forlocal.ui  full.cpp  full.h  grid.cpp  (+27 more)
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
JustTalk_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
JustTalk_autogen/EWIEGA46WW/: moc_CameraWidget.cpp  moc_CameraWidget.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_TcpThread.cpp  moc_TcpThread.cpp.d  moc_VideoThread.cpp  moc_VideoThread.cpp.d  moc_lobby.cpp  moc_lobby.cpp.d  moc_meeting.cpp  moc_meeting.cpp.d  moc_pagewidget.cpp  moc_pagewidget.cpp.d  moc_stackpage.cpp  moc_stackpage.cpp.d
JustTalk_autogen/include/: ui_CameraWidget.h  ui_MainWindow.h  ui_Meeting.h  ui_lobby.h
MainpageTest/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stackpage.cpp  stackpage.h  stackpage.ui
certs/: tcp_server.crt
config/: fisheye_calibration_C.yml  fisheye_calibration_L.yml  fisheye_calibration_R.yml  rpi_ip.json
